--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -23,6 +23,7 @@
     list-style: none;
     gap: 50px;
     color:darkgreen;
+    text-decoration: none;
     font-size: 20px;
 }
 .footer-links li{
